Closed
Bug 235369
Opened 21 years ago
Closed 20 years ago
Address import from Outlook ignores Notes field
Categories
(Thunderbird :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird1.0
People
(Reporter: mark.nospamplease, Assigned: davidf)
References
Details
Attachments
(1 file)
740 bytes,
patch
|
mscott
:
review+
mscott
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla Thunderbird 0.5 (20040207)
Address import from Outlook ignores Notes field
Reproducible: Always
Steps to Reproduce:
1.Import an address book from Outlook that has records containing notes
2.Observe that those notes are missing in the TB address book entries
3.
Actual Results:
Notes field is blank in TB
Expected Results:
Should properly import field from Outlook
Comment 1•21 years ago
|
||
I, too, have been afflicted by this bug and, therefore, confim its presence.
(Was just about to report it when found this report.
Bug also evident in Windows 2000
A pity. The rest of the import seems to work well.
(In reply to comment #0)
> Reproducible: Always
> Steps to Reproduce:
> 1.Import an address book from Outlook that has records containing notes
> 2.Observe that those notes are missing in the TB address book entries
Me too, Reproduce on Outlook 2000 and Outlook Express 6 on Windows 2000.
A shame really because it's stopping me from fully switching over to Thunderbird.
Comment 3•20 years ago
|
||
*** Bug 247824 has been marked as a duplicate of this bug. ***
Comment 4•20 years ago
|
||
*** Bug 259261 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•20 years ago
|
||
This bug is still present with Thunderbird 0.9. Please, please, please solve. It
is an important issue, a broken feature, and severly limits migration from Outlook.
This bug seems to be present on all Windows versions.
Assignee | ||
Comment 6•20 years ago
|
||
Have checked out the code ... it looks like the code in
mailnews/import/outlook/src/nsOutlookMail.cpp is importing the PR_COMMENT field
into field 35, which is the number used by
mailnews/import/src/nsImportFieldMap.cpp to set the Notes property.
After a bit of testing it looks like this should really by PR_BODY instead as
this seems to contain the comments ...
Going to try and see if that fixes it...
Assignee | ||
Comment 7•20 years ago
|
||
This seems to be the required change, taking this bug ...
I just need to test it now :-)
Assignee: mscott → davidf
Status: NEW → ASSIGNED
Assignee | ||
Comment 8•20 years ago
|
||
Just for reference, relevant documentation / code on the web:
MAPI Properties:
http://msdn.microsoft.com/library/default.asp?url=/library/en-us/mapi/html/_mapi1book_properties.asp
Message / Body of Outlook Item: http://support.microsoft.com/?kbid=201105
Address Book Quick Start:
http://msdn.microsoft.com/library/en-us/mapi/html/_mapi1book_finding_information_about_a_user_in_the_address_book.asp?frame=true
Access Windows Address Book (C++):
http://www.daniweb.com/techtalkforums/thread8737.html
Access Address Book (Python):
http://dev.w3.org/cvsweb/2000/10/swap/pim/lookout.py?rev=1.4
(alongside http://www.boddie.org.uk/python/COM.html)
Assignee | ||
Comment 9•20 years ago
|
||
If anyone wants to patch this, here's the relevant diff from a hexdump of
import.dll (TB 0.9) on Windows, from my build (I have to wait to get access to a
machine with Outlook to test this on, I could attach import.dll if required):
0081760 7325 000a 7243 6165 6574 2064 656e 2077
0081770 4d53 5054 7320 7265 6576 3a72 2520 0a73
0081780 0000 0000 0000 0000 0023 0000 fffe ffff
-0081790 001e 1000 0006 0000 ffff ffff 001e 3a08
+0081790 001e 3004 0006 0000 ffff ffff 001e 3a08
00817a0 0007 0000 ffff ffff 001e 3a09 0019 0000
00817b0 ffff ffff 001e 3a16 0017 0000 ffff ffff
00817c0 001e 3a17 000a 0000 ffff ffff 001e 3a1c
Assignee | ||
Comment 10•20 years ago
|
||
Tested with Outlook 2000 SR-1 (9.0.0.3821) and works fine.
Assignee | ||
Comment 11•20 years ago
|
||
Comment on attachment 165375 [details] [diff] [review]
Patch to use PR_BODY instead of PR_COMMENT for importing outlook contact notes
Requesting review for this as it works well for me...
Attachment #165375 -
Flags: superreview?
Attachment #165375 -
Flags: review?
Assignee | ||
Comment 12•20 years ago
|
||
Comment on attachment 165375 [details] [diff] [review]
Patch to use PR_BODY instead of PR_COMMENT for importing outlook contact notes
requesting review from mscott
Attachment #165375 -
Flags: superreview?(mscott)
Attachment #165375 -
Flags: superreview?
Attachment #165375 -
Flags: review?(mscott)
Attachment #165375 -
Flags: review?
Assignee | ||
Comment 13•20 years ago
|
||
Just for fun, a simple python program that will automatically patch
thunderbird.exe (for a static build, like the distributed one) or import.dll
(for a non-static build - change the filenames):
code = open('thunderbird.exe', rb).read()
searchfor = "\x23\x00\x00\x00\xfe\xff\xff\xff\x1e\x00\x04\x30"
replacewith = "\x23\x00\x00\x00\xfe\xff\xff\xff\x1e\x00\x00\x10"
print "found %d occurrences" % code.count(searchfor)
code = code.replace(searchfor, replacewith)
open('thunderbird-236369.exe', 'wb').write(code)
Comment 14•20 years ago
|
||
Comment on attachment 165375 [details] [diff] [review]
Patch to use PR_BODY instead of PR_COMMENT for importing outlook contact notes
Thanks David. I'll check this in for you.
Attachment #165375 -
Flags: superreview?(mscott)
Attachment #165375 -
Flags: superreview+
Attachment #165375 -
Flags: review?(mscott)
Attachment #165375 -
Flags: review+
Updated•20 years ago
|
Target Milestone: --- → Thunderbird1.0
Comment 15•20 years ago
|
||
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•