Bug #235369 --> Address import from Outlook ignores Notes field

Patch by David Fraser